@@ -92,18 +92,17 @@ and when to execute the Scenes
 
 /** returns a shared instance of the director */
 +(Director *)sharedDirector;
-@end
 
+// iPhone Specific
 
-@interface Director (iPhoneSpecific)
 /** change default pixel format
  Call this class method before any other call to the Director.
  Default pixel format: RGB565. Supported pixel formats: RGBA8 and RGB565
  */
 +(void) setPixelFormat: (int) p;
-@end
 
-@interface Director (Landscape)
+// Landscape
+
 /** returns the size of the screen 480x320 or 320x480 depeding if landscape mode is activated or not */
 - (CGRect) winSize;
 /** returns 320x480, always */
@@ -117,10 +116,9 @@ and when to execute the Scenes
  Useful to convert (multi) touchs coordinates to the current layout (portrait or landscape)
  */
 -(CGPoint) convertCoordinate: (CGPoint) p;
-@end
 
+// Scene Management
 
-@interface Director (SceneManagement)
 /**Runs a scene, entering in the Director's main loop. 
  */
 - (void) runScene:(Scene*) scene;
@@ -155,18 +153,16 @@ and when to execute the Scenes
  The "delta time" will be 0 (as if the game wasn't paused)
  */
 -(void) resume;
-@end
 
+// Events
 
-@interface Director (Events)
 /** adds a cocosnode object to the list of multi-touch event queue */
 -(void) addEventHandler: (CocosNode*) node;
 /** removes a cocosnode object from the list of multi-touch event queue */
 -(void) removeEventHandler: (CocosNode*) node;
-@end
 
+// OpenGL Helper
 
-@interface Director (OpenGLHelper)
 /** enables/disables OpenGL alpha blending */
 - (void) setAlphaBlending: (BOOL) on;
 /** enables/disables OpenGL depth test */
